--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -4,23 +4,100 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <title>History</title>
 </head>
 <body>
-    <h1>History</h1>
+    <style> 
+        .social-icon {
+          color: dimgrey;
+          margin-right: 15px; 
+        }
+    </style>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark" style="background-color: #060606;" data-mdb-theme="dark">
+        <div class="container-fluid">
+        <div>
+            <span class="ms-2">
+    
+                <a style="text-decoration:none;" href="https://sg.linkedin.com/in/ng-xuan-yi-1234567890" target="blank" class="social-icon">
+                    <i class="bi bi-linkedin" ></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.facebook.com/" target="blank" class="social-icon">
+                    <i class="bi bi-facebook"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://github.com/ngxuanyi" target="blank" class="social-icon">
+                    <i class="bi bi-github"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.instagram.com/" target="blank" class="social-icon">
+                    <i class="bi bi-instagram"></i>
+                </a> 
+            
+                <a style="text-decoration:none;" href="https://www.youtube.com/" target="blank" class="social-icon">
+                    <i class="bi bi-youtube"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.twitter.com/" target="blank" class="social-icon">
+                    <i class="bi bi-twitter"></i>
+                </a>
+            </span>   
+        </div>
+        <div class="navbar-header">
+            <div class="text-center">
+            <img data-th-src="${'/images/XYZdrk.png'}" class="img-logo" alt="logo" height="60px" width="60px" >
+            </div>
+        </div>
+        <div>
+            <ul class="nav navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/home}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/search}">Dictionary</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">History</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/docs}">Docs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/logout}">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="justify-content-center align-items-center text-center custom-margin-top">
+    <h3>History</h3>
+    </div>
     <div>
-        <table>
+        <table class="table table-bordered table-hover">
             <tr>
                 <th>Words Searched</th>
                 <th>Definition</th>
             </tr>
             <tr data-th-each="entry:${history}">
                 <td data-th-text="${entry.key}"></td>
-                <td data-th-text="${entry.value}"></td>
+                <td data-th-text="${entry.value}" class="lh-base"></td>
             </tr>
             
            
         </table>
     </div>
+
+  <footer class="text-center text-lg-start bg-body-tertiary text-muted">
+    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    </section>
+      <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.05);">
+        Copyright © 2023 XYZ Foundation
+      </div>
+    </section>
+  </footer>
+  
 </body>
+
 </html>
