--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,9 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <title>Home</title>
 </head>
 <body>
+    <!-- <navbar> -->
+    <style> 
+        .social-icon {
+          color: dimgrey;
+          margin-right: 30px; 
+        }
+    </style>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark" style="background-color: #060606;" data-mdb-theme="dark">
+        <div class="container-fluid">
+        <div>
+            <span class="ms-2">
+    
+                <a style="text-decoration:none;" href="https://sg.linkedin.com/in/ng-xuan-yi-1234567890" target="blank" class="social-icon">
+                    <i class="bi bi-linkedin" ></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.facebook.com/" target="blank" class="social-icon">
+                    <i class="bi bi-facebook"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://github.com/ngxuanyi" target="blank" class="social-icon">
+                    <i class="bi bi-github"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.instagram.com/" target="blank" class="social-icon">
+                    <i class="bi bi-instagram"></i>
+                </a> 
+            
+                <a style="text-decoration:none;" href="https://www.youtube.com/" target="blank" class="social-icon">
+                    <i class="bi bi-youtube"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.twitter.com/" target="blank" class="social-icon">
+                    <i class="bi bi-twitter"></i>
+                </a>
+            </span>   
+        </div>
+        <div class="navbar-header">
+            <div class="text-center">
+            <img data-th-src="${'/images/XYZdrk.png'}" class="img-logo" alt="logo" height="60px" width="60px" >
+            </div>
+        </div>
+        <div>
+            <ul class="nav navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/search}">Dictionary</a>
+                </li>
+                <li class="nav-item">
+
+                    <a class="nav-link" data-th-href="@{/dictionary/history/{username}(username=${username})}">History</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/docs}">Docs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/logout}">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    
     <H1> Home </H1> 
 
     <a data-th-href="@{/dictionary/search}">
@@ -28,6 +95,29 @@
         </button>
     </a>
     
+    <footer class="text-center text-lg-start bg-body-tertiary text-muted fixed-bottom">
+      
+          
+      <!-- <style>
+          .contact-icon {
+              margin-right: 20px; 
+              text-align:left;
+          }
+      </style> -->
+        <!-- <div class="text-center p-1.5" style="background-color: rgba(87, 86, 86, 0.2);"> -->
+
+            <!-- <span class="contact-icon"> <i class="bi bi-house-door-fill"></i> Singapore 733223, Singapore </span>
+            <span class="contact-icon"> <i class="bi bi-envelope-fill"></i> info@example.com </span>
+            <span class="contact-icon"> <i class="bi bi-telephone-fill"></i> +65 6322 8333 </span> -->
+            <!-- <span class="text-end"> Copyright © 2023 XYZ Foundation </span>
+        </div> -->
+    
+        <div class="text-center mt-5 text-muted">
+            Copyright © 2023 XYZ Foundation
+        </div>
+  
+      </section>
+      </footer>
    
 </body>
 </html>
