--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <title>User Login</title>
 </head>
 <body>
@@ -14,14 +14,17 @@
 			<div class="row justify-content-sm-center h-100">
 				<div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
 					<div class="text-center my-5">
-                        <img data-th-src="${'/images/XYZ.png'}" alt="logo" width="100">
+                        <img data-th-src="${'/images/XYZ.png'}" alt="logo" width="170">
         </div>
-    <h1>Welcome to the dictionary!</h1> 
-    <br>
-    <h3>Login here:</h3>
-
+    <div>
+    <h3>Welcome to the XYZ dictionary!</h3> 
+    </div>
     <div class="card shadow-lg">
         <div class="card-body p-5">
+        <div>
+            <h5>Login here:</h5>
+        </div>
+            
         <form method="POST" data-th-action="@{/dictionary/home}" data-th-object="${user}"> 
             <table>
                 <tr>
@@ -59,9 +62,16 @@
         
     </div>
     
-    <div class="text-center mt-5 text-muted">
-        Copyright © 2023 XYZ Foundation
-    </div>
-    
+    <footer class="text-center text-lg-start bg-body-tertiary text-muted fixed-bottom">
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+        </section>
+        <section>
+          <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.05);">
+            Copyright © 2023 XYZ Foundation
+          </div>
+        </section>
+      </footer>
+      
+</footer>
 </body>
 </html>
