--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -3,9 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <title>Log Out</title>
 </head>
 <body>
+    <style> 
+        .social-icon {
+          color: dimgrey;
+          margin-right: 15px; 
+        }
+    </style>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark" style="background-color: #060606;" data-mdb-theme="dark">
+        <div class="container-fluid">
+        <div>
+            <span class="ms-2">
+    
+                <a style="text-decoration:none;" href="https://sg.linkedin.com/in/ng-xuan-yi-1234567890" target="blank" class="social-icon">
+                    <i class="bi bi-linkedin" ></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.facebook.com/" target="blank" class="social-icon">
+                    <i class="bi bi-facebook"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://github.com/ngxuanyi" target="blank" class="social-icon">
+                    <i class="bi bi-github"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.instagram.com/" target="blank" class="social-icon">
+                    <i class="bi bi-instagram"></i>
+                </a> 
+            
+                <a style="text-decoration:none;" href="https://www.youtube.com/" target="blank" class="social-icon">
+                    <i class="bi bi-youtube"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.twitter.com/" target="blank" class="social-icon">
+                    <i class="bi bi-twitter"></i>
+                </a>
+            </span>   
+        </div>
+        <div class="navbar-header">
+            <div class="text-center">
+            <img data-th-src="${'/images/XYZdrk.png'}" class="img-logo" alt="logo" height="60px" width="60px" >
+            </div>
+        </div>
+        <div>
+            <ul class="nav navbar-nav">
+                <li class="nav-item">
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/register}">Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/login}">Login</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="card shadow-lg">
+        <div class="card-body p-5">
+        <div>
     <h3>You have logged out successfully ☺</h3>
     
         <a data-th-href= "@{/dictionary/login}"> 
