--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,15 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <title>Register</title>
 </head>
 <body>
-    <h1>Welcome to the dictionary!</h1> 
-    <br>
-    <h3>Register here:</h3>
+    <style> 
+        .social-icon {
+          color: dimgrey;
+          margin-right: 15px; 
+        }
+    </style>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark" style="background-color: #060606;" data-mdb-theme="dark">
+        <div class="container-fluid">
+        <div>
+            <span class="ms-2">
+    
+                <a style="text-decoration:none;" href="https://sg.linkedin.com/in/ng-xuan-yi-1234567890" target="blank" class="social-icon">
+                    <i class="bi bi-linkedin" ></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.facebook.com/" target="blank" class="social-icon">
+                    <i class="bi bi-facebook"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://github.com/ngxuanyi" target="blank" class="social-icon">
+                    <i class="bi bi-github"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.instagram.com/" target="blank" class="social-icon">
+                    <i class="bi bi-instagram"></i>
+                </a> 
+            
+                <a style="text-decoration:none;" href="https://www.youtube.com/" target="blank" class="social-icon">
+                    <i class="bi bi-youtube"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.twitter.com/" target="blank" class="social-icon">
+                    <i class="bi bi-twitter"></i>
+                </a>
+            </span>   
+        </div>
+        <div class="navbar-header">
+            <div class="text-center">
+            <img data-th-src="${'/images/XYZdrk.png'}" class="img-logo" alt="logo" height="60px" width="60px" >
+            </div>
+        </div>
+        <div>
+            <ul class="nav navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/search}">Dictionary</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/history/{username}(username=${username})}">History</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/docs}">Docs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/logout}">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div>
+    <h1>Welcome to the XYZ dictionary!</h1> 
+    </div>
 
     <div class="card shadow-lg">
         <div class="card-body p-5">
+        <div>
+            <h3>Register here:</h3>
+        </div>
         <form method="POST" data-th-action="@{/dictionary/registered}" data-th-object="${newUser}"> 
             <table>
                 <tr>
