--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -9,18 +9,109 @@
 </head>
 
 <body>
-   
-    <form method="POST" data-th-action="@{/dictionary/result}">
-        <h1> What word do you want to learn today? </h1>
-        <div class="row g-3 align-items-center">
+    <style> 
+        .social-icon {
+          color: dimgrey;
+          margin-right: 30px; 
+        }
+    </style>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark" style="background-color: #060606;" data-mdb-theme="dark">
+        <div class="container-fluid">
+        <div>
+            <span class="ms-2">
+    
+                <a style="text-decoration:none;" href="https://sg.linkedin.com/in/ng-xuan-yi-1234567890" target="blank" class="social-icon">
+                    <i class="bi bi-linkedin" ></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.facebook.com/" target="blank" class="social-icon">
+                    <i class="bi bi-facebook"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://github.com/ngxuanyi" target="blank" class="social-icon">
+                    <i class="bi bi-github"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.instagram.com/" target="blank" class="social-icon">
+                    <i class="bi bi-instagram"></i>
+                </a> 
+            
+                <a style="text-decoration:none;" href="https://www.youtube.com/" target="blank" class="social-icon">
+                    <i class="bi bi-youtube"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.twitter.com/" target="blank" class="social-icon">
+                    <i class="bi bi-twitter"></i>
+                </a>
+            </span>   
+        </div>
+        <div class="navbar-header">
+            <div class="text-center">
+            <img data-th-src="${'/images/XYZdrk.png'}" class="img-logo" alt="logo" height="60px" width="60px" >
+            </div>
+        </div>
+        <div>
+            <ul class="nav navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" data-th-href="@{/dictionary/home}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" data-th-href="@{/dictionary/search}">Dictionary</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/history/{username}(username=${username})}">History</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/docs}">Docs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/logout}">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <style>
+        .custom-margin-top {
+            margin-top: 150px; /* Adjust the value as needed */
+        }
+    </style>
+
+    <div class="d-flex justify-content-center align-items-center">
+    <form method="POST" data-th-action="@{/dictionary/result}" data-th-object="${searchInput}" class="text-center custom-margin-top">
+        <div class="justify-content-center align-items-center text-center">
+        <h3> What word do you want to learn today? </h3>
+        </div>
+        <!-- <div class="input-group rounded"> -->
+            <div class="row height d-flex justify-content-center align-items-center">
+
+                <div class="col-md-8">
             <label for="searchInput"></label>
-            <input type="text" name="searchInput" placeholder="Enter your search">
-            <button type="submit" class="btn btn-link"> 
+            <input type="search" class="form-control rounded" placeholder="Enter your search" data-th-field="*{wordValue}">
+            <span data-th-if="${#fields.hasErrors('wordValue')}" data-th-errors="*{wordValue}" data-th-error="error"></span>
+            <span><button type="submit" class="btn btn-link"> 
                 <!-- <img data-th-src="${'/images/searchbutton.png'}" alt="search button icon" width="20" height="20"> -->
                 <i class="bi bi-search"></i>
             </button>
+            </span>
         </div>
     </form>
-        
+    </div>
+
+
+<footer class="text-center text-lg-start bg-body-tertiary text-muted fixed-bottom">
+    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    </section>
+      <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.05);">
+        Copyright © 2023 XYZ Foundation
+      </div>
+    </section>
+  </footer>
+  
+
+
+
 </body>
+
 </html>
