--- a/src/main/resources/templates/searcherror.html
+++ b/src/main/resources/templates/searcherror.html
@@ -53,13 +53,13 @@
         <div>
             <ul class="nav navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link"data-th-href="@{/dictionary/search}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" data-th-href="@{/dictionary/search}">Dictionary</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-th-href="@{/dictionary/history/{username}(username=${username})}">History</a>
+                    <a class="nav-link active" aria-current="page" data-th-href="@{/dictionary/history/{username}(username=${username})}">History</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" data-th-href="@{/dictionary/docs}">Docs</a>
@@ -73,18 +73,13 @@
 
     <style>
         .custom-margin-top {
-            margin-top: 150px; /* Adjust the value as needed */
+            margin-top: 150px; 
         }
     </style>
+    
+ <div class="justify-content-center align-items-center text-center custom-margin-top">
+    <p>The input word '<span data-th-text="${searchInput}"> </span>' is invalid.</p>
+</div>
 
-    <div class="justify-content-center align-items-center text-center custom-margin-top">
-    <h1>Sorry! The page you requested does not exist. </h1>
-
-    <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-emoji-frown" viewBox="0 0 16 16">
-        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
-        <path d="M4.285 12.433a.5.5 0 0 0 .683-.183A3.498 3.498 0 0 1 8 10.5c1.295 0 2.426.703 3.032 1.75a.5.5 0 0 0 .866-.5A4.498 4.498 0 0 0 8 9.5a4.5 4.5 0 0 0-3.898 2.25.5.5 0 0 0 .183.683M7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5m4 0c0 .828-.448 1.5-1 1.5s-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5"/>
-      </svg>
-
-    </div>
 </body>
 </html>
