--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -130,9 +130,14 @@
         </form>
     </div>
     
-    <div class="text-center mt-5 text-muted">
-        Copyright © 2023 XYZ Foundation
-    </div>
-    
+    <footer class="text-center text-lg-start bg-body-tertiary text-muted fixed-bottom">
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+        </section>
+        <section>
+          <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.05);">
+            Copyright © 2023 XYZ Foundation
+          </div>
+        </section>
+      </footer>
 </body>
 </html>
