--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -74,8 +74,11 @@
 
     <style>
         .custom-margin-top {
-            margin-top: 150px; /* Adjust the value as needed */
+            margin-top: 150px;
         }
+        .form-control::placeholder {
+        text-align: center;
+}
     </style>
 
     <div class="d-flex justify-content-center align-items-center">
@@ -92,7 +95,9 @@
             <span data-th-if="${#fields.hasErrors('wordValue')}" data-th-errors="*{wordValue}" data-th-error="error"></span>
             <span><button type="submit" class="btn btn-link"> 
                 <!-- <img data-th-src="${'/images/searchbutton.png'}" alt="search button icon" width="20" height="20"> -->
-                <i class="bi bi-search"></i>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#black" class="bi bi-search" viewBox="0 0 16 16">
+                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                  </svg>
             </button>
             </span>
         </div>
