--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,7 +11,7 @@
     <style> 
         .social-icon {
           color: dimgrey;
-          margin-right: 15px; 
+          margin-right: 30px; 
         }
     </style>
 
@@ -86,5 +86,15 @@
       </svg>
 
     </div>
+
+    <footer class="text-center text-lg-start bg-body-tertiary text-muted">
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+        </section>
+          <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.05);">
+            Copyright © 2023 XYZ Foundation
+          </div>
+        </section>
+      </footer>
+      
 </body>
 </html>
