--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -11,7 +11,7 @@
     <style> 
         .social-icon {
           color: dimgrey;
-          margin-right: 15px; 
+          margin-right: 30px; 
         }
     </style>
 
@@ -71,21 +71,43 @@
         </div>
     </nav>
 
-    <div class="justify-content-center align-items-center text-center custom-margin-top">
-    <h3>History</h3>
+
+<style>
+    .table-striped tbody tr:nth-child(odd) {
+        background-color:#E7E7E7;
+    }
+    
+    .table-striped tbody tr:nth-child(even) {
+        background-color: #FFFFFF;
+    }
+
+</style>
+    <!-- <div class="justify-content-center align-items-center text-center custom-margin-top"> -->
+    <div class="text-center" style="margin: 40px; padding-right: 30px;">
+        <h3>History</h3>
+     <!-- <span style="display: inline-flex;"><h3>History </h3> <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-clock-history" viewBox="0 0 16 16">
+        <path d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022zm2.004.45a7.003 7.003 0 0 0-.985-.299l.219-.976c.383.086.76.2 1.126.342zm1.37.71a7.01 7.01 0 0 0-.439-.27l.493-.87a8.025 8.025 0 0 1 .979.654l-.615.789a6.996 6.996 0 0 0-.418-.302zm1.834 1.79a6.99 6.99 0 0 0-.653-.796l.724-.69c.27.285.52.59.747.91l-.818.576zm.744 1.352a7.08 7.08 0 0 0-.214-.468l.893-.45a7.976 7.976 0 0 1 .45 1.088l-.95.313a7.023 7.023 0 0 0-.179-.483m.53 2.507a6.991 6.991 0 0 0-.1-1.025l.985-.17c.067.386.106.778.116 1.17l-1 .025zm-.131 1.538c.033-.17.06-.339.081-.51l.993.123a7.957 7.957 0 0 1-.23 1.155l-.964-.267c.046-.165.086-.332.12-.501zm-.952 2.379c.184-.29.346-.594.486-.908l.914.405c-.16.36-.345.706-.555 1.038l-.845-.535m-.964 1.205c.122-.122.239-.248.35-.378l.758.653a8.073 8.073 0 0 1-.401.432l-.707-.707z"/>
+        <path d="M8 1a7 7 0 1 0 4.95 11.95l.707.707A8.001 8.001 0 1 1 8 0z"/>
+        <path d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5"/>
+      </svg></span> -->
+    
+    <p> The table below displays all of your past searches: </p>
     </div>
-    <div>
-        <table class="table table-bordered table-hover">
-            <tr>
-                <th>Words Searched</th>
-                <th>Definition</th>
+    <div style="margin: 40px;">
+        <table class="table table-striped table-bordered table-hover" >
+            <thead style="background-color: hwb(0 25% 75%);">
+            <tr class="text-center" style="color: aliceblue;">
+                <th style="width: 12%;">Words Searched</th>
+                <th style="width: 88%; padding-right: 195px;">Definition</th>
             </tr>
+        </thead>
+        <tbody>
             <tr data-th-each="entry:${history}">
-                <td data-th-text="${entry.key}"></td>
-                <td data-th-text="${entry.value}" class="lh-base"></td>
+                <td data-th-text="${entry.key}" class="text-capitalize text-center"></td>
+                <td data-th-if="${entry.value == ''}" class="text-center fst-italic" style="color: crimson; padding-right: 195px;">Word is invalid</td>
+                <td data-th-unless="${entry.value == ''}" data-th-text="${entry.value}" class="lh-base"></td>
             </tr>
-            
-           
+        </tbody>
         </table>
     </div>
 
