--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -11,7 +11,7 @@
     <style> 
         .social-icon {
           color: dimgrey;
-          margin-right: 15px; 
+          margin-right: 30px; 
         }
     </style>
 
@@ -53,6 +53,7 @@
         <div>
             <ul class="nav navbar-nav">
                 <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true" href="#" style="color: #060606;">Placeholderss</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" data-th-href="@{/dictionary/register}">Register</a>
@@ -60,9 +61,19 @@
                 <li class="nav-item">
                     <a class="nav-link" data-th-href="@{/dictionary/login}">Login</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" data-th-href="@{/dictionary/docs}">Docs</a>
+                </li>
             </ul>
         </div>
     </nav>
+
+    <section class="h-100">
+		<div class="container h-100">
+			<div class="row justify-content-sm-center h-100">
+				<div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
+					<div class="text-center my-5">
+                        <img data-th-src="${'/images/XYZ.png'}" alt="logo" width="170" class="mb-5">
 
     <div class="card shadow-lg">
         <div class="card-body p-5">
@@ -74,5 +85,14 @@
             </button>
         </a>
     
+    <footer class="text-center text-lg-start bg-body-tertiary text-muted fixed-bottom">
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+        </section>
+        <section>
+            <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.05);">
+            Copyright © 2023 XYZ Foundation
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
