--- a/src/main/resources/templates/registered.html
+++ b/src/main/resources/templates/registered.html
@@ -8,12 +8,83 @@
     <title>Registration Success</title>
 </head>
 <body>
-    <h2>You have registered successfully!</h2>
+    <style> 
+        .social-icon {
+          color: dimgrey;
+          margin-right: 30px; 
+        }
+    </style>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark" style="background-color: #060606;" data-mdb-theme="dark">
+        <div class="container-fluid">
+        <div>
+            <span class="ms-2">
+    
+                <a style="text-decoration:none;" href="https://sg.linkedin.com/in/ng-xuan-yi-1234567890" target="blank" class="social-icon">
+                    <i class="bi bi-linkedin" ></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.facebook.com/" target="blank" class="social-icon">
+                    <i class="bi bi-facebook"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://github.com/ngxuanyi" target="blank" class="social-icon">
+                    <i class="bi bi-github"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.instagram.com/" target="blank" class="social-icon">
+                    <i class="bi bi-instagram"></i>
+                </a> 
+            
+                <a style="text-decoration:none;" href="https://www.youtube.com/" target="blank" class="social-icon">
+                    <i class="bi bi-youtube"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.twitter.com/" target="blank" class="social-icon">
+                    <i class="bi bi-twitter"></i>
+                </a>
+            </span>   
+        </div>
+        <div class="navbar-header">
+            <div class="text-center">
+            <img data-th-src="${'/images/XYZdrk.png'}" class="img-logo" alt="logo" height="60px" width="60px" >
+            </div>
+        </div>
+        <div>
+            <ul class="nav navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true" href="#" style="color: #060606;">Placeholderss</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/register}">Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/login}">Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" data-th-href="@{/dictionary/docs}">Docs</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <h3>You have registered successfully!☺</h3>
 
     <a data-th-href= "@{/dictionary/login}"> 
         <button type="button"> Go back to the login page 
         </button>
     </a>
+
+    <footer class="text-center text-lg-start bg-body-tertiary text-muted fixed-bottom">
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+        </section>
+        <section>
+          <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.05);">
+            Copyright © 2023 XYZ Foundation
+          </div>
+        </section>
+      </footer>
+
 
 </body>
 </html>
