--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -8,6 +8,69 @@
     <title>Result</title>
 </head>
 <body>
+
+    <style> 
+        .social-icon {
+          color: dimgrey;
+          margin-right: 30px; 
+        }
+    </style>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark" style="background-color: #060606;" data-mdb-theme="dark">
+        <div class="container-fluid">
+        <div>
+            <span class="ms-2">
+    
+                <a style="text-decoration:none;" href="https://sg.linkedin.com/in/ng-xuan-yi-1234567890" target="blank" class="social-icon">
+                    <i class="bi bi-linkedin" ></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.facebook.com/" target="blank" class="social-icon">
+                    <i class="bi bi-facebook"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://github.com/ngxuanyi" target="blank" class="social-icon">
+                    <i class="bi bi-github"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.instagram.com/" target="blank" class="social-icon">
+                    <i class="bi bi-instagram"></i>
+                </a> 
+            
+                <a style="text-decoration:none;" href="https://www.youtube.com/" target="blank" class="social-icon">
+                    <i class="bi bi-youtube"></i>
+                </a>
+            
+                <a style="text-decoration:none;" href="https://www.twitter.com/" target="blank" class="social-icon">
+                    <i class="bi bi-twitter"></i>
+                </a>
+            </span>   
+        </div>
+        <div class="navbar-header">
+            <div class="text-center">
+            <img data-th-src="${'/images/XYZdrk.png'}" class="img-logo" alt="logo" height="60px" width="60px" >
+            </div>
+        </div>
+        <div>
+            <ul class="nav navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" data-th-href="@{/dictionary/home}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" data-th-href="@{/dictionary/search}">Dictionary</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/history/{username}(username=${username})}">History</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/docs}">Docs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" data-th-href="@{/dictionary/logout}">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     
     <!-- <ul th:if="${wordList}">
         <li th:each="word : ${wordList}">
@@ -20,22 +83,30 @@
     </ul>
     <p th:unless="${wordList}">No results found.</p> -->
     
-    <table class="table table-striped">
+    <!-- <table class="table table-striped">
         <thead>
             <tr>
                 <th>Word</th>
                 <th>Definition</th>
                 </tr>
             </thead>
-            <tbody >
+            <tbody>
                 <tr >
-                    <td data-th-text="${word.wordValue}"></td>
-                    <td data-th-text="${word.definition}"></td>
+                    <td data-th-text="${word.wordValue}"> this is the word searched</td>
+                    <td data-th-text="${word.definition}"> this is the definition of the word</td>
                     <td>
                 </tr>
                
             </tbody>
-    </table>
+    </table> -->
+
+    <div class="text-center" style="margin: 40px; padding-right: 30px;">
+    <h3> Results </h3>
+    <p class="font-monospac fw-bold" data-th-text="${word.wordValue}"> Search </p>
+
+    <p data-th-text="${word.definition}" class="lh-base"> this is the definition of the word</p>
+    </div>
+
     <footer class="text-center text-lg-start bg-body-tertiary text-muted fixed-bottom">
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
         </section>
@@ -43,6 +114,7 @@
             Copyright © 2023 XYZ Foundation
           </div>
         </section>
-      </footer>
+    </footer>
+
 </body>
 </html>
