with docker file

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -75,7 +75,11 @@
 
     <div class="text-center" style="margin: 40px; padding-right: 30px;">
     <H3> Home </H3> 
-    <p> Welcome back!</p>
+    </div>
+    <div class="text-center" style="margin: 40px; padding-right: 30px;">
+    <span> Welcome back,</span> 
+    <span class="fw-bold" data-th-object="${username}" data-th-text="${username}" style="font-style: italic;"></span> 
+    <span>!</span>
     </div>
 
    <style>
@@ -89,7 +93,7 @@
     <div class="card-body" style="padding: 70px; background-color: rgba(255, 216, 201, 0.945);">
     <div>
         <div class="text-center p-1.5" > 
-
+            <p>Contact Us</p>
             <span class="contact-icon"> <i class="bi bi-house-door-fill"></i> Singapore 733223, Singapore </span>
             <span class="contact-icon"> <i class="bi bi-envelope-fill"></i> xyzdictionary@gmail.com </span>
             <span class="contact-icon"> <i class="bi bi-telephone-fill"></i> +65 6322 8333 </span>
@@ -119,14 +123,14 @@
     
 
     
-      <footer class="text-center text-lg-start bg-body-tertiary text-muted fixed-bottom">
-        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-        </section>
-          <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.05);">
-            Copyright © 2023 XYZ Foundation
-          </div>
-        </section>
-      </footer>
+    <footer class="text-center text-lg-start bg-body-tertiary text-muted fixed-bottom">
+    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    </section>
+        <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.05);">
+        Copyright © 2023 XYZ Foundation
+        </div>
+    </section>
+    </footer>
    
 </body>
 </html>
