--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -87,7 +87,7 @@
 
     </div>
 
-    <footer class="text-center text-lg-start bg-body-tertiary text-muted">
+    <footer class="text-center text-lg-start bg-body-tertiary text-muted fixed-bottom">
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
         </section>
           <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.05);">
