--- a/src/main/resources/templates/searcherror.html
+++ b/src/main/resources/templates/searcherror.html
@@ -77,18 +77,18 @@
         }
     </style>
     
- <div class="justify-content-center align-items-center text-center custom-margin-top">
-    <p>The input word '<span data-th-text="${searchInput}"> </span>' is invalid.</p>
+ <div class="justify-content-center align-items-center text-center">
+    <p>The input word '<span data-th-text="${searchInput}" style="font-style: italic;"> </span>' is invalid.</p>
 </div>
 
-<footer class="text-center text-lg-start bg-body-tertiary text-muted">
+<footer class="text-center text-lg-start bg-body-tertiary text-muted fixed-bottom">
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
     </section>
       <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.05);">
         Copyright © 2023 XYZ Foundation
       </div>
     </section>
-  </footer>
+</footer>
 
 </body>
 </html>
