with user controls

--- a/src/main/resources/templates/docs.html
+++ b/src/main/resources/templates/docs.html
@@ -86,15 +86,15 @@
             <div class="text-center">
             <p><strong>Purpose of the API: </strong> Get word definitions </p>
             <p><strong>How to use: </strong> The basic syntax of a URL request to the API is shown below:</p>
-            <p> <a href="#" class="link-underline-primary"> https://api.result?word=[query param value]</a></p>
+            <p> <a href="#" class="link-underline-primary"> https://dictionary/api/result?word=[query param value]</a></p>
             <p>As an example, to get definition of English word <code>code</code>, you can send request to:</p>
-            <a href="https://api.result?word=code">https://api.result?word=code</a>
+            <a href="/dictionary/api/result?word=code">https://dictionary/api/result?word=code</a>
             <p></p>
             <br>
             </div>
             <!-- <pre> -->
             <div class="card shadow-lg">
-                <div class="card-body" style="background-color: rgba(230, 227, 226, 0.914);">
+                <div class="card-body" style="background-color: rgba(195, 193, 192, 0.914);">
                 <div>
             <!-- <span class="rounded-0" style="color: burlywood;"> -->
             <code class="lh-base">
