--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -100,11 +100,15 @@
             </tbody>
     </table> -->
 
+   
     <div class="text-center" style="margin: 40px; padding-right: 30px;">
     <h3> Results </h3>
-    <p class="font-monospac fw-bold" data-th-text="${word.wordValue}"> Search </p>
+    </div>
+    <div class="card shadow-lg" style="padding: 30px;">
+    <p class="font-monospac fw-bold" data-th-text="${word.wordValue}"> </p>
 
-    <p data-th-text="${word.definition}" class="lh-base"> this is the definition of the word</p>
+    <p data-th-text="${word.definition}" class="lh-base"> </p>
+    </div>
     </div>
 
     <footer class="text-center text-lg-start bg-body-tertiary text-muted fixed-bottom">
