--- a/src/main/resources/templates/searcherror.html
+++ b/src/main/resources/templates/searcherror.html
@@ -76,9 +76,11 @@
             margin-top: 150px; 
         }
     </style>
-    
- <div class="justify-content-center align-items-center text-center">
+
+<div class="card shadow-lg custom-margin-top" style="padding: 30px;">
+ <div class="justify-content-center align-items-center text-center ">
     <p>The input word '<span data-th-text="${searchInput}" style="font-style: italic;"> </span>' is invalid.</p>
+</div>
 </div>
 
 <footer class="text-center text-lg-start bg-body-tertiary text-muted fixed-bottom">
