--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -53,20 +53,20 @@
         <div>
             <ul class="nav navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#">Register</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-th-href="@{/dictionary/search}">Dictionary</a>
+                    <a class="nav-link" data-th-href="@{/dictionary/login}">Login</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" data-th-href="@{/dictionary/history/{username}(username=${username})}">History</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" data-th-href="@{/dictionary/docs}">Docs</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" data-th-href="@{/dictionary/logout}">Logout</a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </nav>
