--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -105,7 +105,7 @@
     <h3> Results </h3>
     </div>
     <div class="card shadow-lg" style="padding: 30px;">
-    <p class="font-monospac fw-bold" data-th-text="${word.wordValue}"> </p>
+    <p class="font-monospac fw-bold text-capitalize" data-th-text="${word.wordValue}"> </p>
 
     <p data-th-text="${word.definition}" class="lh-base"> </p>
     </div>
