--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -102,7 +102,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr data-th-each="entry:${history}">
+            <tr data-th-each="entry:${history}" style="padding-bottom: 200px;">
                 <td data-th-text="${entry.wordValue}" class="text-capitalize text-center"></td>
                 <td data-th-if="${entry.definition == ''}" class="text-center fst-italic" style="color: crimson; padding-right: 195px;">Word is invalid</td>
                 <td data-th-unless="${entry.definition == ''}" data-th-text="${entry.definition}" class="lh-base"></td>
@@ -111,7 +111,7 @@
         </table>
     </div>
 
-  <footer class="text-center text-lg-start bg-body-tertiary text-muted">
+  <footer class="text-center text-lg-start bg-body-tertiary text-muted fixed-bottom">
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
     </section>
       <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.05);">
