--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,10 +16,12 @@
 					<div class="text-center my-5">
                         <img data-th-src="${'/images/XYZ.png'}" alt="logo" width="170">
         </div>
-    <div>
+    
+    <div class="text-center" style="padding-bottom: 20px; ">
     <h3>Welcome to the XYZ dictionary!</h3> 
+   
     </div>
-    <div class="card shadow-lg">
+    <div class="card shadow-lg" style="padding-bottom: 20px;">
         <div class="card-body p-5">
         <div>
             <h5>Login here:</h5>
@@ -32,7 +34,7 @@
                         <label for="username">Username:</label> 
                     </td>
                     <td>
-                        <input type="text" id="username" size="30" 
+                        <input type="text" id="username" size="28" 
                                     placeholder="Please type in your username" data-th-field="*{username}" >
                             <label data-th-if="${#fields.hasErrors('username')}" data-th-errors="*{username}" style="color: red;"></label>
                         </td>
@@ -42,7 +44,7 @@
                         <label for="password">Password:</label>
                     </td>
                     <td>
-                        <input type="password" id="password" size="30" 
+                        <input type="password" id="password" size="28" 
                                 placeholder="Please type in your password" data-th-field="*{password}">
                         <label data-th-if="${#fields.hasErrors('password')}" data-th-errors="*{password}" style="color: red;"></label>
                     </td>
@@ -59,7 +61,6 @@
             </table>
         </form>
 
-        
     </div>
     
     <footer class="text-center text-lg-start bg-body-tertiary text-muted fixed-bottom">
