--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -11,7 +11,7 @@
     <style> 
         .social-icon {
           color: dimgrey;
-          margin-right: 15px; 
+          margin-right: 30px; 
         }
     </style>
 
@@ -53,41 +53,55 @@
         <div>
             <ul class="nav navbar-nav">
                 <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true" href="#" style="color: #060606;">Placeholderss</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Register</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" data-th-href="@{/dictionary/login}">Login</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" data-th-href="@{/dictionary/history/{username}(username=${username})}">History</a>
-                </li> -->
                 <li class="nav-item">
                     <a class="nav-link" data-th-href="@{/dictionary/docs}">Docs</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" data-th-href="@{/dictionary/logout}">Logout</a>
-                </li> -->
             </ul>
         </div>
     </nav>
 
-    <div>
-    <h1>Welcome to the XYZ dictionary!</h1> 
-    </div>
+    <!-- <style>
+        .card {
+                margin: 0 150px; 
+              }
+              
+        </style> -->
 
+<section class="h-100">
+    <div class="container h-100">
+        <div class="row justify-content-center h-100">
+            <div class="col-xxl-4 col-xl-5 col-lg-5 col-md-7 col-sm-9">
+                <!-- <div class="text-center my-5"> -->
+
+    <div class="text-center justify-content-center" style="padding-top: 80px; padding-bottom: 30px; padding-left: 20px;">
+    <h3>Registration</h3> 
+    <br>
+    <!-- </div>
+    <div class="text-center" style="width: max-content; padding-right: 20px;"> -->
+        <p class="fw-light" style="font-style: italic;">"The limits of your language are the limits of your world.” - Arthur Schopenhauer</p>
+    </div>
     <div class="card shadow-lg">
-        <div class="card-body p-5">
+        <div class="card-body" >
         <div>
-            <h3>Register here:</h3>
+            <h5>Join the community here:</h5>
         </div>
-        <form method="POST" data-th-action="@{/dictionary/registered}" data-th-object="${newUser}" onsubmit="return checkPasswords()"> 
+       
+        <form method="POST" data-th-action="@{/dictionary/registered}" data-th-object="${newUser}" onsubmit="return checkPasswords()" > 
             <table>
                 <tr>
                     <td> 
                         <label for="fullName">Full Name:</label> 
                     </td>
                     <td>
-                        <input type="text" id="fullName" size="30" 
+                        <input type="text" id="fullName" size="25" 
                                     placeholder="Please enter your full name" data-th-field="*{fullName}" >
                             <label data-th-if="${#fields.hasErrors('fullName')}" data-th-errors="*{fullName}" style="color: red;"></label>
                         </td>
@@ -97,7 +111,7 @@
                         <label for="username">Username:</label> 
                     </td>
                     <td>
-                        <input type="text" id="username" size="30" 
+                        <input type="text" id="username" size="25" 
                                     placeholder="Please enter your username" data-th-field="*{username}" >
                             <label data-th-if="${#fields.hasErrors('username')}" data-th-errors="*{username}" style="color: red;"></label>
                         </td>
@@ -107,7 +121,7 @@
                         <label for="password">Password:</label>
                     </td>
                     <td>
-                        <input type="password" id="password" size="30" 
+                        <input type="password" id="password" size="25" 
                                 placeholder="Please enter your password" data-th-field="*{password}">
                         <label data-th-if="${#fields.hasErrors('password')}" data-th-errors="*{password}" style="color: red;"></label>
                     </td>
@@ -116,7 +130,7 @@
                     <label for="confirmedPassword">Confirm Password:</label>
                 </td>
                 <td>
-                    <input type="password" id="confirmedPassword" size="30" 
+                    <input type="password" id="confirmedPassword" size="25" 
                             placeholder="Please confirm your password" data-th-field="*{confirmedPassword}">
                     <label data-th-if="${#fields.hasErrors('confirmedPassword')}" data-th-errors="*{confirmedPassword}" style="color: red;"></label>
                 </td>
@@ -129,6 +143,7 @@
             </table>
         </form>
     </div>
+
     
     <footer class="text-center text-lg-start bg-body-tertiary text-muted fixed-bottom">
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
@@ -138,7 +153,7 @@
             Copyright © 2023 XYZ Foundation
           </div>
         </section>
-      </footer>
+    </footer>
 
       <script>
         function checkPasswords() {
@@ -157,15 +172,6 @@
             }
         }
     </script>
-
-    <!-- <script>
-        console.log("Script loaded.");
-    
-        function checkPasswords() {
-            console.log("Function called.");
-            return true;  // Allow the form to be submitted
-        }
-    </script> -->
     
 </body>
 </html>
